--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   <title>Login</title>
 </head>
 <body>
+  <main>
+    <section id="login">
+      <div id="imagem">
+
+      </div>
+      <div id="formulario">
+        <h1>Login</h1>
+        <p>Seja bem-vindo(a) novamente. Faca login para acessar sua conta e poder fazer as configuracoes no seu ambiente.</p>
+        <form action="login.php" method="post"></form>
+      </div>
+    </section>
+  </main>
   
 </body>
 </html>
