--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
       <div id="formulario">
         <h1>Login</h1>
         <p>Seja bem-vindo(a) novamente. Faca login para acessar sua conta e poder fazer as configuracoes no seu ambiente.</p>
-        <form action="login.php" method="post"></form>
+        <form action="login.php" method="post">
+          <div class="campo">
+            <label for="iemail">Login</label>
+            <input type="email" name="login" id="ilogin" placeholderer="Seu e-mail">          
+          </div>
+          <div class="campo">
+            <label for="isenha">Senha</label>
+          </div>
+        </form>
       </div>
     </section>
   </main>
