--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
   <link rel="stylesheet" href="estilos/style.css">
   <link rel="stylesheet" href="estilos/media-query.css">;
-  <title>Login</title>
 </head>
 <body>
   <main>
@@ -17,14 +18,23 @@
       <div id="formulario">
         <h1>Login</h1>
         <p>Seja bem-vindo(a) novamente. Faca login para acessar sua conta e poder fazer as configuracoes no seu ambiente.</p>
-        <form action="login.php" method="post">
+        <form action="login.php" method="post" autocomplete="on">
           <div class="campo">
+            <span class="material-symbols-outlined">person</span>
+            <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlenght="30">          
             <label for="iemail">Login</label>
-            <input type="email" name="login" id="ilogin" placeholderer="Seu e-mail">          
           </div>
           <div class="campo">
+            <span class="material-symbols-outlined">vpn_key</span>
+            <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
             <label for="isenha">Senha</label>
           </div>
+          <input type="submit" value="Entrar">
+          <!-- Botao "Esqueci a senha" adicionado em forma de link para evitarmos de usar JavaScript (ainda nao aprendemos). No lugar usariamos a tag <button> -->
+            <a href="esqueci.html">
+              Esqueci a senha
+              <span class="material-symbols-outlined">mail</span>
+            </a>
         </form>
       </div>
     </section>
