--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
           <input type="submit" value="Entrar">
           <!-- Botao "Esqueci a senha" adicionado em forma de link para evitarmos de usar JavaScript (ainda nao aprendemos). No lugar usariamos a tag <button> -->
-            <a href="esqueci.html">
+            <a href="esqueci.html" class="botao">
               Esqueci a senha
               <span class="material-symbols-outlined">mail</span>
             </a>
